Add some TPL ignores [ci skip]

--- a/.gitignore
+++ b/.gitignore
@@ -110,8 +110,10 @@ SNTools.project
 *.settings
 *ioss.doxygen.warn
 *ioss.tags
+TPL/adios2/ADIOS2/
 TPL/cgns/CGNS/
 TPL/data-warehouse-release
+TPL/gtest/googletest/
 TPL/hdf5/hdf5-*.tar.bz2/
 TPL/hdf5/hdf5-*/
 TPL/kokkos/kokkos
