IOSS: initial cgns-decomp - run decomp on specified file

--- a/packages/seacas/libraries/ioss/src/main/CMakeLists.txt
+++ b/packages/seacas/libraries/ioss/src/main/CMakeLists.txt
@@ -27,6 +27,13 @@ TRIBITS_ADD_EXECUTABLE(
   NOEXESUFFIX
   SOURCES struc_to_unstruc.C
   )
+
+TRIBITS_ADD_EXECUTABLE(
+  cgns-decomp
+  NOEXEPREFIX
+  NOEXESUFFIX
+  SOURCES cgns-decomp.C
+  )
 ENDIF()
 
 TRIBITS_ADD_EXECUTABLE(
