--- a/packages/seacas/libraries/ioss/src/main/CMakeLists.txt
+++ b/packages/seacas/libraries/ioss/src/main/CMakeLists.txt
@@ -146,6 +146,7 @@ ENDIF()
 install_executable(cth_pressure_map)
 IF (TPL_ENABLE_CGNS)
 install_executable(struc_to_unstruc)
+install_executable(cgns-decomp)
 ENDIF()
 install_executable(io_shell)
 install_executable(shell_to_hex)
