EXODUS: Support python3 in exodus.py

--- a/packages/seacas/scripts/CMakeLists.txt
+++ b/packages/seacas/scripts/CMakeLists.txt
@@ -67,9 +67,15 @@ endif()
 ASSERT_DEFINED(${PROJECT_NAME}_ENABLE_SEACASExodus)
 ASSERT_DEFINED(BUILD_SHARED_LIBS)
 IF (${PROJECT_NAME}_ENABLE_SEACASExodus)
+   IF (${PythonInterp_FIND_VERSION} VERSION_LESS "3.0")
+      SET( INPUT "${CMAKE_CURRENT_SOURCE_DIR}/exodus-2.py.in" )
+   ELSE()
+      SET( INPUT "${CMAKE_CURRENT_SOURCE_DIR}/exodus-3.py.in" )
+   ENDIF()
+   
    IF (BUILD_SHARED_LIBS)
       CONFIGURE_FILE(
-		${CMAKE_CURRENT_SOURCE_DIR}/exodus.py.in
+		${INPUT}
 		${CMAKE_CURRENT_BINARY_DIR}/exodus.py
 		@ONLY
 		)
