--- a/packages/seacas/scripts/exodus-2.py.in
+++ b/packages/seacas/scripts/exodus-2.py.in
@@ -4,9 +4,9 @@ import os
 
 """
 
-exodus.py v 1.10 (beta) is a python wrapper of some of the exodus library
+(Python 2 Version) exodus.py v 1.11 (beta) is a python wrapper of some of the exodus library
 
-Copyright(C) 2018 National Technology & Engineering Solutions of
+Copyright(C) 2019 National Technology & Engineering Solutions of
 Sandia, LLC (NTESS).  Under the terms of Contract DE-NA0003525 with
 NTESS, the U.S. Government retains certain rights in this software.
 
@@ -42,10 +42,10 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 EXODUS_PY_COPYRIGHT_AND_LICENSE = __doc__
 
-EXODUS_PY_VERSION = "1.10 (beta-cmake)"
+EXODUS_PY_VERSION = "1.11 (beta-cmake)"
 
 EXODUS_PY_COPYRIGHT = """
-You are using exodus.py v 1.10 (beta-cmake), a python wrapper of some of the exodus library.
+You are using exodus.py v 1.11 (beta-cmake), a python wrapper of some of the exodus library.
 
 Copyright (c) 2013, 2014, 2015, 2016, 2017, 2018, 2019 National Technology &
 Engineering Solutions of Sandia, LLC (NTESS).  Under the terms of
