--- a/packages/seacas/scripts/exodus-3.py.in
+++ b/packages/seacas/scripts/exodus-3.py.in
@@ -3,8 +3,8 @@ from ctypes import *
 import os
 
 """
-
-(Python 3 Version) exodus.py v 1.11 (beta) is a python wrapper of some of the exodus library
+exodus.py v 1.11 (seacas-beta) is a python wrapper of some of the exodus library
+(Python 3 Version) 
 
 Copyright(C) 2019 National Technology & Engineering Solutions of
 Sandia, LLC (NTESS).  Under the terms of Contract DE-NA0003525 with
@@ -37,15 +37,14 @@ DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-
 """
 
 EXODUS_PY_COPYRIGHT_AND_LICENSE = __doc__
 
-EXODUS_PY_VERSION = "1.11 (beta-cmake)"
+EXODUS_PY_VERSION = "1.11 (seacas-beta)"
 
 EXODUS_PY_COPYRIGHT = """
-You are using exodus.py v 1.11 (beta-cmake), a python wrapper of some of the exodus library.
+You are using exodus.py v 1.11 (seacas-beta), a python wrapper of some of the exodus library.
 
 Copyright (c) 2013, 2014, 2015, 2016, 2017, 2018, 2019 National Technology &
 Engineering Solutions of Sandia, LLC (NTESS).  Under the terms of
@@ -64,6 +63,9 @@ Authors:
 sys.dont_write_bytecode = True
 
 ONELINE = "Gather from or export to Exodus files using the Exodus library"
+
+if sys.version_info[0] < 3:
+    raise Exception("Cannot use Python 2, must use Python 3.X")
 
 
 def basename(file_name):
@@ -89,9 +91,6 @@ def getExodusVersion():
                 fields[1] == 'EX_API_VERS_NODOT'):
             return int(fields[2])
     return 0
-
-if sys.version_info[0] < 3:
-    raise Exception("Cannot use Python 2, must use Python 3.X")
 
 ACCESS = os.getenv('ACCESS', '@ACCESSDIR@')
 if os.uname()[0] == 'Darwin':
@@ -263,9 +262,8 @@ def ex_entity_type(varType):
     # none found, must be invalid
     return -1  # EX_INVALID
 
+
 # init params struct
-
-
 class ex_init_params(Structure):
     """
     Parameters defining the model dimension, note that many are optional.
@@ -411,7 +409,8 @@ class exodus:
           -> put initialization information into exodus file
         """
         if len(p.title)>MAX_LINE_LENGTH: 
-            print(('WARNING: Exodus title "%s" exceeds the maximum line length (%i). It will be truncated.' % (p.title,MAX_LINE_LENGTH)))
+            print(('WARNING: Exodus title "%s" exceeds maximum line length (%i). It will be truncated.' %
+                   (p.title,MAX_LINE_LENGTH)))
             p.title = p.title[-1*MAX_LINE_LENGTH:]
 
         self.Title = create_string_buffer(p.title, MAX_LINE_LENGTH + 1)
@@ -3597,13 +3596,13 @@ class exodus:
             self.numNodeSets = c_int(0)
             self.numSideSets = c_int(0)
         EXODUS_LIB.ex_get_init(
-            self.fileId, self.Title, byref(
-                self.numDim), byref(
-                    self.numNodes), byref(
-                        self.numElem), byref(
-                            self.numElemBlk), byref(
-                                self.numNodeSets), byref(
-                                    self.numSideSets))
+            self.fileId, self.Title, 
+            byref(self.numDim),
+            byref(self.numNodes),
+            byref(self.numElem),
+            byref(self.numElemBlk),
+            byref(self.numNodeSets),
+            byref(self.numSideSets))
 
     # --------------------------------------------------------------------
 
@@ -3697,16 +3696,13 @@ class exodus:
 
     def _ex_get_info_recs_quietly(self):
         num_infos = c_int(self.__ex_inquire_int(ex_inquiry("EX_INQ_INFO")))
-        print("Exodus file has num_infos:", num_infos)
         info_ptrs = (POINTER(c_char * (MAX_LINE_LENGTH + 1)) * num_infos.value)()
-        print(num_infos.value)
         for i in range(num_infos.value):
             info_ptrs[i] = pointer(create_string_buffer(MAX_LINE_LENGTH + 1))
         if num_infos.value:
             EXODUS_LIB.ex_get_info(self.fileId, byref(info_ptrs))
         info_recs = []
         for irp in info_ptrs:
-            print( irp.contents.value.decode("utf8"))
             info_recs.append(irp.contents.value.decode("utf8"))
         return info_recs
 
@@ -3884,8 +3880,7 @@ class exodus:
             EXODUS_LIB.ex_get_ids(
                 self.fileId,
                 ex_entity_type('EX_ELEM_BLOCK'),
-                byref(
-                    self.elemBlkIds))
+                byref(self.elemBlkIds))
 
     # --------------------------------------------------------------------
 
@@ -3898,8 +3893,7 @@ class exodus:
             EXODUS_LIB.ex_get_ids(
                 self.fileId,
                 ex_entity_type('EX_SIDE_SET'),
-                byref(
-                    self.sideSetIds))
+                byref(self.sideSetIds))
 
     # --------------------------------------------------------------------
 
@@ -3912,8 +3906,7 @@ class exodus:
             EXODUS_LIB.ex_get_ids(
                 self.fileId,
                 ex_entity_type('EX_NODE_SET'),
-                byref(
-                    self.nodeSetIds))
+                byref(self.nodeSetIds))
 
     # --------------------------------------------------------------------
 
@@ -4073,10 +4066,10 @@ class exodus:
         self.coordsY = (c_double * self.numNodes.value)()
         self.coordsZ = (c_double * self.numNodes.value)()
         EXODUS_LIB.ex_get_coord(
-            self.fileId, byref(
-                self.coordsX), byref(
-                self.coordsY), byref(
-                self.coordsZ))
+            self.fileId, 
+            byref(self.coordsX),
+            byref(self.coordsY),
+            byref(self.coordsZ))
 
     # --------------------------------------------------------------------
 
@@ -4089,10 +4082,10 @@ class exodus:
             self.coordsY[i] = float(yCoords[i])
             self.coordsZ[i] = float(zCoords[i])
         EXODUS_LIB.ex_put_coord(
-            self.fileId, byref(
-                self.coordsX), byref(
-                self.coordsY), byref(
-                self.coordsZ))
+            self.fileId, 
+            byref(self.coordsX),
+            byref(self.coordsY),
+            byref(self.coordsZ))
 
     # --------------------------------------------------------------------
 
@@ -5461,7 +5454,7 @@ def ctype_to_numpy(exo, c_array):
     # ctypes currently produce invalid PEP 3118 type codes, which causes numpy
     # to issue a warning.  This is a bug and can be ignored.
     # http://stackoverflow.com/questions/4964101/pep-3118-warning-when-using-ctypes-array-as-numpy-array
-    if (len(c_array) == 0):
+    if len(c_array) == 0:
         return exo.np.array([])
 
     with exo.warnings.catch_warnings():
