--- a/SEACAS-Test/Makefile
+++ b/SEACAS-Test/Makefile
@@ -98,6 +98,7 @@ matlab: baseline.g
 	$(EXODIFF) -stat baseline.g baseline.exo
 
 python: baseline.g
+	$(RM) baseline*copy*.e
 	PYTHONPATH=../lib:$$PYTHONPATH python testExo.py
 	$(EXODIFF) -stat -pedantic baseline.g baseline_numpy_copy.e
 	$(EXODIFF) -stat -pedantic baseline.g baseline_ctype_copy.e
