--- a/packages/seacas/scripts/exodus-3.py.in
+++ b/packages/seacas/scripts/exodus-3.py.in
@@ -446,7 +446,7 @@ class exodus:
     #
     # --------------------------------------------------------------------
 
-    def copy(self, fileName):
+    def copy(self, fileName, include_transient=False):
         """
         exo_copy = exo.copy(file_name)
 
@@ -467,7 +467,7 @@ class exodus:
         i64Status = EXODUS_LIB.ex_int64_status(self.fileId)
         EXODUS_LIB.ex_set_int64_status(fileId, i64Status)
 
-        self.__copy_file(fileId)
+        self.__copy_file(fileId, include_transient)
         EXODUS_LIB.ex_close(self.fileId)
 
         return exodus(fileName, "a")
@@ -3599,8 +3599,12 @@ class exodus:
 
     # --------------------------------------------------------------------
 
-    def __copy_file(self, fileId):
-        EXODUS_LIB.ex_copy(self.fileId, fileId)
+    def __copy_file(self, fileId, include_transient=False):
+        if (include_transient):
+            EXODUS_LIB.ex_copy(self.fileId, fileId)
+            EXODUS_LIB.ex_copy_transient(self.fileId, fileId)
+        else:
+            EXODUS_LIB.ex_copy(self.fileId, fileId)
 
     # --------------------------------------------------------------------
 
