--- a/SEACAS-Test/Makefile
+++ b/SEACAS-Test/Makefile
@@ -104,7 +104,7 @@ base_ioshell.g:
 python: baseline.g base_ioshell.g
 	$(RM) baseline*copy*.e
 	$(RM) base_ioshell*copy*.e
-	PYTHONPATH=../lib:$$PYTHONPATH $(PYTHON) testExo.py
+	PYTHONPATH=../lib:$$PYTHONPATH $(PYTHON) test_exo.py
 	$(EXODIFF) -stat -pedantic baseline.g baseline_numpy_copy.e
 	$(EXODIFF) -stat -pedantic baseline.g baseline_ctype_copy.e
 	$(EXODIFF) -stat -pedantic base_ioshell.g base_ioshell_copy.e
